--- a/WebContent/listAddMetrologicalControl.zul
+++ b/WebContent/listAddMetrologicalControl.zul
@@ -4,7 +4,7 @@
 <?link rel="icon" tye="image/x-icon" href="/images/favicon.ico"?>
 <?init class="com.alodiga.services.provider.web.security.InitiatorLoggedUser" ?>
 <zk xmlns:n="native">
-    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.ListTransitController" class="general-window">
+    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.ListAddMetrologicalControlController" class="general-window">
         <style src="/css/general.css"/>
         <borderlayout width="100%" height="100%" class="content-transparent">
             <north border="none" size="52px" class="content-transparent">
@@ -26,42 +26,27 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.product.list.transit')}" />
+                                                 <toolbarbutton label="${c:l('sp.crud.product.list.meteorological')}" onClick='Executions.sendRedirect(&quot;listMetrologicalControl.zul&quot;)'/>
+                                                 |
+                                                <toolbarbutton label="${c:l('sp.crud.product.detail.meteorological')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
                                         <div>
-                                            <!--Filters for Searching-->
-                                            <vlayout>
-                                                <hlayout style="text-align:right">
-                                                    <label value="${c:l('sp.common.alias')}" width="80px" sclass="lblbold"/>
-                                                    <textbox id="txtAlias" value="" width="150px" tooltiptext="${c:l('sp.common.searching.filter')}"/>
-                                                </hlayout>
 
-                                                <hlayout>
-                                                    <!--Add button-->
-                                                    <div align="left" width="495px">
-                                                    </div>
-                                                    <!--Filters button-->
-                                                    <div align="right" width="400px">
-                                                        <button id="btnSearch" label="${c:l('sp.common.actions.search')}" width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.search.filter.tooltip')}"/>
-                                                        <button id="btnClear" label="${c:l('sp.common.actions.cancel')}"  width="80px" class="open gray" tooltiptext="${c:l('sp.common.actions.cancel.filter.tooltip')}"/>
-                                                    </div>
-                                                </hlayout>
-
-                                            </vlayout>
                                             <separator/>
                                             <!--Record Listbox-->
                                             <listbox id="lbxRecords" fixedLayout="true" width="895px" height="530px">
                                                 <listhead>
-                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="125px" sort="auto" align="center"/>
-                                                    <listheader label="${c:l('sp.common.descripton')}" width="225px" sort="auto" align="center"/>
-                                                    <listheader label="${c:l('sp.common.ubicationBox')}" width="120px" sort="auto" align="center"/>
-                                                    <listheader label="${c:l('sp.common.ubicationFolder')}" width="125px" sort="auto" align="center"/>
-                                                    <listheader label="${c:l('sp.common.amount')}" width="85px" sort="auto" align="center"/>
-                                                    <listheader label="${c:l('sp.common.stock')}" width="85px" sort="auto" align="center"/>
-                                                    <listheader label="-" width="45px" align="center"/>
-                                         
+                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="135px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.descripton')}" width="240px" sort="auto"/>
+                                                     <listheader label="${c:l('sp.common.provider')}" width="110px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.serial')}" width="95px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.stock')}" width="95px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.creationDate')}" width="120px" sort="auto"/>
+                                                    <listheader label="-" width="45px"/>
+                                                    <listheader label="-" width="45px"/>
+                                                    
                                                 </listhead>
                                             </listbox>
                                             
