--- a/WebContent/adminAddMetrorologicalControl.zul
+++ b/WebContent/adminAddMetrorologicalControl.zul
@@ -4,7 +4,7 @@
 <?link rel="icon" tye="image/x-icon" href="/images/favicon.ico"?>
 <?init class="com.alodiga.services.provider.web.security.InitiatorLoggedUser" ?>
 <zk xmlns:n="native">
-    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.AdminAddQuarantineController" class="general-window" >
+    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.AdminAddMetrologicalControlController" class="general-window" >
         <style src="/css/general.css"/>
         <borderlayout width="100%" height="100%" class="content-transparent">
             <north border="none" size="52px" class="content-transparent">
@@ -26,9 +26,9 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.product.list.quarantine')}" onClick='Executions.sendRedirect(&quot;listQuarantine.zul&quot;)'/>
+                                                <toolbarbutton label="${c:l('sp.crud.product.meteorological')}" onClick='Executions.sendRedirect(&quot;listMetrologicalControl.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.common.quarantine.add')}" />
+                                                <toolbarbutton label="${c:l('sp.common.meteorological.add')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
@@ -143,7 +143,7 @@
                                                         <column label="" width="690px"/>
                                                     </columns>
                                                     <rows>
-                                                        <group label="${c:l('sp.common.quarantine')}" />
+                                                        <group label="${c:l('sp.common.meteorological')}" />
                                                          <row>
                                                             <label value="${c:l('sp.common.category')}" sclass="lblbold"/>
                                                             <hlayout>
@@ -192,10 +192,10 @@
                                                                 <label value="*" sclass="lblreq" />
                                                             </hlayout>
                                                         </row>
-                                                         <row>
+                                                          <row>
                                                             <label value="${c:l('sp.common.date.add')}" sclass="lblbold"/>
                                                              <hlayout>
-                                                            <datebox id="dtxIntro" width="120px" format="dd-MM-yyyy"/>
+                                                            <datebox id="dtxCreation" width="120px" format="dd-MM-yyyy"/>
                                                             </hlayout>
                                                         </row>
                                                          <row>
@@ -211,12 +211,6 @@
                                                             	<checkbox id="cbxCure" checked="true"/>
                                                             	<datebox id="dtxCure" width="120px" format="dd-MM-yyyy"/>
                                                              </hlayout>
-                                                        </row>
-                                                        <row>
-                                                            <label value="${c:l('sp.common.quaratine.reason')}" sclass="lblbold"/>
-                                                            <hlayout>
-                                                               <textbox id="txtQuarantine"  rows="4" maxlength="45" width="320px"/>                                 
-                                                            </hlayout>
                                                         </row>
                                                          <row>
                                                             <label value="${c:l('sp.common.observations')}" sclass="lblbold"/>
