--- a/WebContent/listEgressQuarantine.zul
+++ b/WebContent/listEgressQuarantine.zul
@@ -26,9 +26,7 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                 <toolbarbutton label="${c:l('sp.crud.product.list.quarantine')}" onClick='Executions.sendRedirect(&quot;listQuarantine.zul&quot;)'/>
-                                                 |
-                                                <toolbarbutton label="${c:l('sp.crud.product.detail.quarantine')}" />
+                                                <toolbarbutton label="${c:l('sp.crud.product.list.quarantine')}" />
                                             </hlayout>
                                         </div>
  <div height="5px" width="100%" style="background:#333;" align="left"></div>
